--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,28 +1,24 @@
 version: 2.1
 jobs:
+  lint:
+    docker:
+      - image: circleci/golang:1.12.9
+    working_directory: /go/src/github.com/joshdk/go-junit
+    steps:
+      - checkout
+      - run:
+          name: Lint Go code
+          command: make lint
+
   test:
     docker:
-    - image: circleci/golang:1.11.5
+    - image: circleci/golang:1.12.9
     working_directory: /go/src/github.com/joshdk/go-junit
     steps:
     - checkout
     - run:
-        name: Install build tools
-        command: |
-          go get -u github.com/alecthomas/gometalinter
-          go get -u github.com/jstemmer/go-junit-report
-          gometalinter --install
-          mkdir test-results
-    - run:
-        name: Lint Go code
-        command: gometalinter --vendor
-    - run:
         name: Test Go code
-        command: go test -v 2>&1 | tee test-results/report.log
-    - run:
-        name: Generate test report
-        command: cat test-results/report.log | go-junit-report -go-version $GOLANG_VERSION > test-results/report.xml
-        when: always
+        command: make test
     - store_test_results:
         path: test-results
 
@@ -30,4 +26,5 @@ workflows:
   version: 2
   build:
     jobs:
+    - lint
     - test
